tests/negative/typecheck/untagged_not_sum.orng
// untagged_not_sum.orng:5:19: error: not an enum type
// const x: @Untagged(Int)
//                  ^
// 
const x: @Untagged(Int)